<!--
  ~ Copyright (C) 2017 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">F2FAuth</string>
    <string name="retry">Retry</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="a11y_user_photo">user photo</string>
    <string name="a11y_user_name">user name</string>
    <string name="search_hint">search repository</string>
    <string name="endpoint_hint">set endpoint URL</string>
    <string name="repo_full_name"><b>%s</b>/%s</string>
    <string name="empty_search_result">No results for <b>%s</b></string>
    <string name="a11y_contributor_avatar">contributor avatar</string>
    <string name="provision_button">Provision New Device</string>
    <string name="home_button">Provision</string>
    <string name="hint_text">https://my-auth-server.biz/</string>
    <string name="device_name">device name</string>
    <string name="auth_button">Authenticate</string>
    <string name="delete_button">Delete Profile</string>
    <string name="accept_button">ACCEPT</string>
    <string name="reject_button">REJECT</string>
    <string name="auth_request">Authentication Requst</string>
    <string name="test_button">Test Auth Status</string>
</resources>
