<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2017 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>

        <import type="com.matthewsuozzo.f2fauth.vo.Device" />
        <import type="com.matthewsuozzo.f2fauth.vo.Profile" />
        <import type="com.matthewsuozzo.f2fauth.vo.Status" />
        <import type="com.matthewsuozzo.f2fauth.vo.Resource" />
        <import type="androidx.lifecycle.LiveData"/>
        <variable
            name="device"
            type="LiveData&lt;Resource&lt;Device&gt;&gt;" />

        <variable
            name="profile"
            type="LiveData&lt;Resource&lt;Profile&gt;&gt;" />

        <variable
            name="peerDevice"
            type="LiveData&lt;Resource&lt;Device&gt;&gt;" />

        <variable
            name="peerProfile"
            type="LiveData&lt;Resource&lt;Profile&gt;&gt;" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            app:visibleGone="@{device.data.initialized}"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="154dp"
            android:id="@+id/header"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/homeButton"
            tools:ignore="MissingConstraints">

            <ImageView
                android:layout_width="@dimen/photo_size"
                app:imageUrl="@{device.data.initialized ? (profile.data.serverUrl + `/images?name=` + device.data.name) : null}"
                android:layout_height="@dimen/photo_size"
                android:id="@+id/avatar"
                android:contentDescription="@string/a11y_user_photo"
                android:scaleType="centerCrop"
                android:background="@mipmap/ic_launcher"
                tools:layout_editor_absoluteY="8dp"
                tools:layout_editor_absoluteX="8dp" />

            <TextView
                android:text="@{device.data.name}"
                android:contentDescription="@string/a11y_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                app:layout_constraintStart_toEndOf="@+id/avatar"
                android:layout_marginStart="@dimen/default_margin"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/default_margin"
                tools:text="albert einstein"
                android:layout_marginLeft="@dimen/default_margin" />
        </LinearLayout>

        <Button
            app:visibleGone="@{device.data.initialized}"
            android:id="@+id/authButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            app:visibleGone="@{device.data.initialized}"
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/authButton"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            app:visibleGone="@{device.data.initialized}"
            android:id="@+id/testButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deleteButton"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:text=""
            android:contentDescription="@string/a11y_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tokenField"
            android:layout_marginStart="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@+id/testButton"
            android:layout_marginTop="@dimen/default_margin"
            tools:text="No Token"
            android:layout_marginLeft="@dimen/default_margin" />

        <TextView
            app:visibleGone="@{peerDevice.data.name != null}"
            android:text="@string/auth_request"
            android:contentDescription="@string/a11y_user_name"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/auth_banner"
            app:layout_constraintBottom_toTopOf="@+id/peer_header"
            tools:text="albert einstein"
            android:layout_marginLeft="@dimen/default_margin" />

        <LinearLayout
            app:visibleGone="@{peerDevice.data.name != null}"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="154dp"
            android:id="@+id/peer_header"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/actions"
            tools:ignore="MissingConstraints">

            <ImageView
                android:layout_width="@dimen/photo_size"
                app:imageUrl="@{peerDevice.data.name != null ? (profile.data.serverUrl + `/images?name=` + peerDevice.data.name) : null}"
                android:layout_height="@dimen/photo_size"
                android:id="@+id/peer_avatar"
                android:contentDescription="@string/a11y_user_photo"
                android:scaleType="centerCrop"
                android:background="@mipmap/ic_launcher"
                tools:layout_editor_absoluteY="8dp"
                tools:layout_editor_absoluteX="8dp" />

            <TextView
                android:text="@{peerDevice.data.name}"
                android:contentDescription="@string/a11y_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/peer_name"
                app:layout_constraintStart_toEndOf="@+id/avatar"
                android:layout_marginStart="@dimen/default_margin"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/default_margin"
                tools:text="albert einstein"
                android:layout_marginLeft="@dimen/default_margin" />
        </LinearLayout>

        <LinearLayout
            app:visibleGone="@{peerDevice.data.name != null}"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="154dp"
            android:id="@+id/actions"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints">

            <Button
                app:visibleGone="@{peerDevice.data.name != null}"
                android:id="@+id/acceptButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                app:visibleGone="@{peerDevice.data.name != null}"
                android:id="@+id/rejectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reject_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
